Construction of the security system without the configuration of error message

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,44 @@
 security:
+    encoders:
+        App\Entity\User:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
+            provider: app_user_provider
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
+            
+            # Activation du form_login
+            # Désormais, lorsque le système de sécurité lance le processus d'authentification,
+            # il redirige l'utilisateur vers le formulaire de connexion /login
+            form_login:
+                login_path: login
+                check_path: login
+
+                # Protection du formulaire de connexion contre les attaques CSRF de connexion
+                csrf_token_generator: security.csrf.token_manager
+
+                # Définit la page de redirect après la connexion
+                # default_target_path: after_login_route_name
+
+                use_referer: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -19,5 +49,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user, roles: ROLE_USER }
